' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml VereinGetController

skinparam classAttributeIconSize 0

package org.springframework {
    package web.bind.annotation {
        interface "@PathVariable" as PathVariable
        interface "@RequestParam" as RequestParam
        interface "@ExceptionHandler" as ExceptionHandler
        interface "@ResponseStatus" as ResponseStatus
        interface "@RequestMapping" as RequestMapping
        interface "@GetMapping" as GetMapping
        interface "@RestController" as RestController

    }


    package hateoas {
        class CollectionModel<E>
    }
}

package jakarta.servlet.http {
    interface HttpServletRequest
}

package java.util {
    interface Map<K,V>
    class UUID
}

package com.acme.verein {
    package service {
        class VereinReadService << control >> << @Service >>
        class NotFoundException
    }

    package rest #DDDDDD {
        class VereinModel <<entity>>

        class VereinGetController << boundary >> << @RestController >> << @RequestMapping >> {
            + @GetMapping findById(@PathVariable id: UUID, request: HttpServletRequest): VereinModel
            + @GetMapping find(@RequestParam queryParams: Map<String, String>, request: HttpServletRequest): CollectionModel<VereinModel>
            + @GetMapping findNamenByPrefix("@PathVariable" prefix: String): String
            + @ExceptionHandler onNotFound(ex: NotFoundException): void
        }



        VereinGetController o--> "1" VereinReadService : service
        VereinGetController ..> VereinModel

        VereinGetController .up.> CollectionModel
        VereinGetController .up.> HttpServletRequest
        VereinGetController .up.> PathVariable
        VereinGetController .up.> RequestParam
        VereinGetController .up.> ExceptionHandler
        VereinGetController .up.> ResponseStatus
        VereinGetController .up.> RestController
        VereinGetController .up.> GetMapping
                VereinGetController .up.> RequestMapping




        VereinGetController .up.> UUID
        VereinGetController .up.> Map

        VereinModel .[hidden].> VereinReadService
    }
}

hide empty members

footer (c) Juergen Zimmermann

@enduml
